--- a/src/page/resume.css
+++ b/src/page/resume.css
@@ -1,18 +1,18 @@
-.resume {
+.page {
   background-color: rgb(242, 231, 245);
-  height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.resume__title {
+.page__title {
   padding-top: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: -35px;
 }
-.resume__title p {
+.page__title p {
   margin: 0;
   margin-left: 10px;
   font-size: 40px;
