--- a/src/component/resumeCard/resumeCard.css
+++ b/src/component/resumeCard/resumeCard.css
@@ -7,11 +7,11 @@
   margin: 0;
   font-size: 30px;
   font-weight: 600;
-  margin-top: 80px;
 }
 .card__summary {
   width: 700px;
   margin-top: 50px;
+  margin-bottom: 100px;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -30,6 +30,7 @@
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 2fr;
+  margin-bottom: 100px;
 }
 .card__left {
   margin-top: 50px;
