--- a/src/page/resume.css
+++ b/src/page/resume.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 .page__title {
   padding-top: 90px;
@@ -11,6 +12,7 @@
   justify-content: center;
   align-items: center;
   margin-left: -35px;
+  margin-bottom: 100px;
 }
 .page__title p {
   margin: 0;
