--- a/src/component/projectCard/projectCard.css
+++ b/src/component/projectCard/projectCard.css
@@ -7,6 +7,7 @@
 }
 .project__card__left {
   flex: 1;
+  position: relative;
 }
 .project__name__line {
   display: flex;
@@ -32,9 +33,10 @@
   margin-right: 20px;
 }
 .project__skill {
+  position: absolute;
+  bottom: 10px;
   display: flex;
   flex-direction: column;
-  margin-top: 35px;
 }
 .project__skill p {
   font-size: 13px;
@@ -47,4 +49,6 @@
 }
 .project__pic {
   width: 500px;
+  height: 313px;
+  object-fit: fill;
 }
