--- a/src/component/myProfile/myProfile.css
+++ b/src/component/myProfile/myProfile.css
@@ -2,8 +2,13 @@
   display: flex;
   justify-content: center;
   margin-top: -2px;
-  height: 100vh;
+
   background: linear-gradient(to right, rgb(242, 231, 245) 40%, white 40%);
+}
+@media only screen and (min-width: 721px) {
+  .profile {
+    height: 100vh;
+  }
 }
 .profile__content {
   display: flex;
@@ -26,7 +31,7 @@
   margin-bottom: 50px;
 }
 
-.profile__nanme {
+.profile__name {
   font-size: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bolder;
@@ -62,4 +67,14 @@
 .paragraph__btn {
   width: 400px;
   display: flex;
+}
+@media only screen and (max-width: 720px) {
+  .profile__content {
+    display: flex;
+    flex-direction: column;
+  }
+  .profile {
+    overflow: auto;
+    height: auto;
+  }
 }
