--- a/src/page/aboutMe.css
+++ b/src/page/aboutMe.css
@@ -1,10 +1,18 @@
 .me {
   display: flex;
   width: 100%;
-  height: 100vh;
-  min-width: 980px;
 }
-
+@media only screen and (min-width: 721px) {
+  .me {
+    height: 100vh;
+    min-width: 980px;
+  }
+}
 .me__right {
   width: 100%;
+}
+@media only screen and (max-width: 720px) {
+  .me__right {
+    width: 100%;
+  }
 }
