--- a/src/component/myProfile/myProfile.css
+++ b/src/component/myProfile/myProfile.css
@@ -72,6 +72,7 @@
   .profile__content {
     display: flex;
     flex-direction: column;
+    margin-left: 30px;
   }
   .profile {
     overflow: auto;
