--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -18,3 +18,8 @@
   opacity: 100%;
   cursor: pointer;
 }
+@media only screen and (max-width: 720px) {
+  .footer {
+    margin-right: 30px;
+  }
+}
