--- a/src/component/projectCard/projectCard.css
+++ b/src/component/projectCard/projectCard.css
@@ -8,7 +8,7 @@
 @media only screen and (max-width: 720px) {
   .project__card {
     flex-direction: column;
-    width: 360px;
+    width: 350px;
     height: 600px;
   }
 }
@@ -73,10 +73,16 @@
     height: 230px;
   }
   .project__pic {
-    width: 360px;
+    width: 350px;
     height: 230px;
   }
   .project__skill {
     bottom: 23px;
+  }
+  .project__text {
+    font-size: 13px;
+  }
+  .project__skill p {
+    font-size: 12px;
   }
 }
