--- a/src/component/projectCard/projectCard.css
+++ b/src/component/projectCard/projectCard.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     width: 350px;
     height: 600px;
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
+    margin-bottom: 50px;
   }
 }
 @media only screen and (min-width: 721px) {
