--- a/src/component/resumeCard/resumeCard.css
+++ b/src/component/resumeCard/resumeCard.css
@@ -24,13 +24,16 @@
   font-size: 15px;
   line-height: 40px;
 }
-.card__content {
-  width: 700px;
-  margin-top: 50px;
-  background-color: white;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  margin-bottom: 100px;
+
+@media only screen and (min-width: 721px) {
+  .card__content {
+    width: 700px;
+    margin-top: 50px;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 100px;
+  }
 }
 .card__left {
   margin-top: 50px;
@@ -61,4 +64,12 @@
   padding-right: 50px;
   font-size: 15px;
   line-height: 40px;
+}
+@media only screen and (max-width: 720px) {
+  .card__content {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+  }
 }
