--- a/src/component/contactCard/contactCard.css
+++ b/src/component/contactCard/contactCard.css
@@ -21,6 +21,7 @@
 }
 @media only screen and (max-width: 720px) {
   .card__contact {
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
     width: 360px;
   }
   .linkedin__url {
