--- a/src/component/resumeCard/resumeCard.css
+++ b/src/component/resumeCard/resumeCard.css
@@ -67,6 +67,7 @@
 }
 @media only screen and (max-width: 720px) {
   .card__summary {
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
     width: 360px;
     margin-top: 50px;
     margin-bottom: 100px;
@@ -85,6 +86,7 @@
     margin-bottom: 20px;
   }
   .card__content {
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
     background-color: white;
     display: flex;
     flex-direction: column;
