--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@
   height: 50px;
   background-color: white;
 }
+@media screen and (orientation: landscape) {
+  .app__footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+}
