--- a/src/page/aboutMe.css
+++ b/src/page/aboutMe.css
@@ -4,10 +4,11 @@
 }
 @media only screen and (min-width: 721px) {
   .me {
-    height: 100vh;
-    min-width: 980px;
+    height: 700px;
+    min-width: 840px;
   }
 }
+
 .me__right {
   width: 100%;
 }
