--- a/src/component/BarRightButton/barRightBtn.css
+++ b/src/component/BarRightButton/barRightBtn.css
@@ -1,11 +1,11 @@
 .bar__right__btn {
   border: none;
   background-color: white;
+  height: 100px;
   font-size: 18px;
   font-family: 'Courier New', Courier, monospace;
   color: rgb(97, 97, 97);
   margin-left: 15px;
-  margin-right: 15px;
 }
 .bar__right__btn:hover {
   cursor: pointer;
@@ -16,5 +16,6 @@
     margin-left: 3px;
     margin-right: 0px;
     font-size: 13px;
+    height: 30px;
   }
 }
