--- a/src/component/projectCard/projectCard.css
+++ b/src/component/projectCard/projectCard.css
@@ -1,9 +1,10 @@
 .project__card {
-  width: 740px;
+  width: 720px;
   background-color: white;
   display: flex;
   height: 280px;
   margin-bottom: 100px;
+  box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
 }
 @media only screen and (max-width: 720px) {
   .project__card {
@@ -68,7 +69,7 @@
 }
 
 .project__pic {
-  width: 370px;
+  width: 360px;
   height: 280px;
   object-fit: fill;
 }
