--- a/src/component/resumeCard/resumeCard.css
+++ b/src/component/resumeCard/resumeCard.css
@@ -9,6 +9,7 @@
   font-weight: 600;
 }
 .card__summary {
+  box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
   width: 700px;
   margin-top: 50px;
   margin-bottom: 100px;
@@ -33,6 +34,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     margin-bottom: 100px;
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
   }
 }
 .card__left {
