--- a/src/component/projectCard/projectCard.css
+++ b/src/component/projectCard/projectCard.css
@@ -1,8 +1,8 @@
 .project__card {
-  width: 720px;
+  width: 700px;
   background-color: white;
   display: flex;
-  height: 280px;
+  height: 260px;
   margin-bottom: 100px;
   box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
 }
@@ -11,18 +11,10 @@
     flex-direction: column;
     width: 350px;
     height: 600px;
-    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
     margin-bottom: 50px;
   }
 }
-@media only screen and (min-width: 721px) {
-  .project__card__left {
-    flex: 1;
-  }
-  .project__card__right {
-    flex: 1;
-  }
-}
+
 .project__card__left {
   position: relative;
 }
@@ -30,7 +22,6 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  margin-top: 10px;
 }
 .project__name__left {
   background-color: blue;
@@ -50,7 +41,6 @@
   text-decoration: none;
 }
 .project__text {
-  font-size: 14px;
   margin: 0;
   margin-left: 70px;
   margin-right: 20px;
@@ -62,15 +52,12 @@
   flex-direction: column;
 }
 .project__skill p {
-  font-size: 13px;
   margin: 0;
   margin-left: 70px;
   margin-top: 3px;
 }
 
 .project__pic {
-  width: 360px;
-  height: 280px;
   object-fit: fill;
 }
 @media only screen and (max-width: 720px) {
@@ -96,5 +83,61 @@
   }
   .project__skill p {
     font-size: 12px;
+  }
+}
+@media only screen and (min-width: 721px) {
+  .project__card {
+    width: 700px;
+    background-color: white;
+    display: flex;
+    height: 260px;
+    margin-bottom: 100px;
+    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.1);
+  }
+  .project__card__left {
+    flex: 1;
+  }
+  .project__card__right {
+    flex: 1;
+  }
+  .project__name__line {
+    margin-top: 0px;
+  }
+  .project__pic {
+    width: 350px;
+    height: 260px;
+    object-fit: fill;
+  }
+  .project__skill p {
+    font-size: 12px;
+  }
+  .project__text {
+    font-size: 13px;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .project__name__line {
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  .project__card {
+    width: 1000px;
+    height: 313px;
+  }
+  .project__pic {
+    width: 500px;
+    height: 313px;
+  }
+  .project__card__left {
+    flex: 1;
+  }
+  .project__card__right {
+    flex: 1;
+  }
+  .project__text {
+    font-size: 15px;
+  }
+  .project__skill p {
+    font-size: 13px;
   }
 }
